# nitch-mac

./: README.md  install.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
