[project]
name = "nitch-mac"
version = "0.3.0"
description = "Python system-fetch utility for macOS inspired by nitch"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
nitch-mac = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
py-modules = ["main"]
