[project]
name = "gletch"
version = "0.3.0"
description = "Python system-fetch utility for macOS"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
gletch = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "main.py",
  "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
